Bug 517288 - Layer masks naming incorrect in canvas contextual messages
Summary: Layer masks naming incorrect in canvas contextual messages
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Layer Stack (other bugs)
Version First Reported In: 5.2.16
Platform: Appimage Linux
: NOR minor
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2026-03-08 12:03 UTC by Frann
Modified: 2026-03-09 12:50 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Frann 2026-03-08 12:03:09 UTC
SUMMARY

When switching layers, a contextual message in the top left area of the canvas hints users with the newly selected layer name. If this layer is a mask (for instance a transparency mask or color overlay mask), the name displayed is the parent layer’s name, not the layer mask’s name itself.

This is mostly confusing when the layers docker is not visible on screen and the user switches layers by another mean, like hitting PageUp or PageDown keys.

STEPS TO REPRODUCE
1. Add a mask to a layer (for instance, a transparency mask) and leave the default naming unchanged (or make sure it has a different name than its parent)
2. Have any other layer selected, then switch to the aforementioned transparency mask
3. Pay attention to the contextual message that briefly appears in the top left region of the canvas

OBSERVED RESULT

The name displayed is the parent layer’s name.

EXPECTED RESULT

The name displayed should be the mask’s actual name.

SOFTWARE/OS VERSIONS
Fedora Linux 43 workstation
Gnome 49
Wayland session

ADDITIONAL INFORMATION
The bug has been seen in the both current stable (5.2.16) and beta (5.3.0) versions. I don’t know whether the correct behaviour has been present earlier or not.
Comment 1 Dmitry Kazakov 2026-03-09 12:50:27 UTC
Git commit c3738e31e2b4f1dbba662e7eb750b52da8dfc64a by Dmitry Kazakov.
Committed on 09/03/2026 at 12:49.
Pushed by dkazakov into branch 'master'.

Fix node name tooltip when switching layers with a shortcut

We should show the actual **node** name, not a name of the current
layer.

M  +1    -8    libs/ui/kis_node_manager.cpp

https://invent.kde.org/graphics/krita/-/commit/c3738e31e2b4f1dbba662e7eb750b52da8dfc64a
Comment 2 Dmitry Kazakov 2026-03-09 12:50:42 UTC
Git commit f523ec456bfeb1474005360acfe127177b242ef6 by Dmitry Kazakov.
Committed on 09/03/2026 at 12:50.
Pushed by dkazakov into branch 'krita/6.0'.

Fix node name tooltip when switching layers with a shortcut

We should show the actual **node** name, not a name of the current
layer.

M  +1    -8    libs/ui/kis_node_manager.cpp

https://invent.kde.org/graphics/krita/-/commit/f523ec456bfeb1474005360acfe127177b242ef6