Fix node name tooltip when switching layers with a shortcut

We should show the actual **node** name, not a name of the current
layer.

BUG:517288